content/boundary/v1.0.x/content/docs/session-recording/configuration/configure-worker-storage.mdx
---
layout: docs
page_title: Configure workers for local storage
description: >-
  Configure Boundary workers for session recording storage. Set the recording path and minimum capacity thresholds, and understand the storage states that control worker availability.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-05-11T10:18:43-04:00
last_modified: 2026-08-10T22:18:15.000Z
# END AUTO GENERATED METADATA
---

# Configure workers for session recording

Session recording requires that you configure at least one worker for local storage.

<Note>

  You cannot use an HCP (HashiCorp Cloud Platform) managed worker for the local storage. HCP Boundary users must configure a self-managed worker to enable session recording.

</Note>

## Requirements

Workers that you configure for storage must:

- Have access to the external storage provider
- Have an accessible directory defined by `recording_storage_path` for storing session recordings while they are in progress. On session closure, Boundary moves the local session recording to remote storage and deletes the local copy.
   - For HCP Boundary, refer to the [Self-managed worker configuration](/hcp/docs/boundary/self-managed-workers/session-recording) documentation.
   - For Boundary Enterprise, refer to the [worker configuration](/boundary/docs/workers#session-recording) documentation.
- Have available disk space defined by `recording_storage_minimum_available_capacity`. If you do not configure the minimum available storage capacity, Boundary uses the default value of 500MiB.
For more information about how much space is required to store BSR files, refer to [storage considerations](/boundary/docs/session-recording#storage-considerations).
- Run Darwin, Windows, or Linux. The following binaries are not supported for session recording: NetBSD, OpenBSD, Solaris.
- Have FFmpeg `5.1.0` or later with the `libsvtav1` codec to record RDP sessions. Refer to [FFmpeg](#ffmpeg) for more information.

### FFmpeg

FFmpeg is a free, open-source tool that records, converts, and streams video.
Boundary requires FFmpeg `5.1.0` or later with the `libsvtav1` codec to create RDP session recording exports.

You can download FFmpeg binaries for Linux, macOS, or Windows from the [FFmpeg download site](https://ffmpeg.org/download.html).
Refer to the [FFmpeg libsvtav1 documentation](https://www.ffmpeg.org/ffmpeg-all.html#libsvtav1) to configure FFmpeg with `libsvtav1`.

Some pre-built binaries include the `libsvtav1` codec, and many package managers bundle `libsvtav1` with FFmpeg by default.
On macOS, you can use Homebrew to install FFmpeg with the `libsvtav1` codec.
The official Debian apt repository also includes `libsvtav1` packaged with FFmpeg.

For more information about FFmpeg and the `libsvtav1` codec, refer to the following official documentation:

- [FFmpeg](https://ffmpeg.org)
- [SVT-AV1 (libsvtav1)](https://trac.ffmpeg.org/wiki/Encode/AV1#SVT-AV1)

## Local storage

Workers require sufficient local disk space in the `recording_storage_path` to store session recordings while they are in progress. Local disk space is also required for session recording playback.

The `recording_storage_minimum_available_capacity` vaule defines the minimum available disk space that must be available on the worker for session recording and session recording playback. This threshold determines the local storage state of the worker.

The possible storage states determined by the `recording_storage_minimum_available_capacity` are:

- `Available`: The worker is above the storage threshold and is available to proxy sessions that are enabled with session recording.

- `Low storage`: The worker is below the storage threshold. Existing sessions can continue without interruption, but new sessions that are enabled with session recording cannot be proxied. The worker is not available to record new sessions or play back existing recordings.

- `Critically low storage`: The worker is below half the storage threshold. Existing sessions that are enabled with session recording will be forcefully closed. The worker is not available to record new sessions or play back existing recordings.

- `Out of storage`: The worker is out of local disk space. It is not available to record new sessions or play back existing recordings. An administrator must free disk space on the worker to remedy the issue. Do not delete session recordings that are mid-recovery to free up disk space.

- `Not configured`: The worker does not have a `recording_storage_path` configured.

- `Unknown`: The default local storage state of a worker. This state indicates that the local storage state of a worker is not yet known. Older workers (< 0.16.0) will be in this state.

If a worker is in an unhealthy local storage state, Boundary does not allow new session recordings or session recording playback until the worker is in an `available` local storage state.

To recover a worker from an unhealthy state, free disk space in the `recording_storage_path` directory.
The worker returns to the `available` state on its own, and does not require a restart.

A worker in an unhealthy state does not return to `Available` as soon as it crosses back over the threshold.
  Available disk space must reach 125 percent of the `recording_storage_minimum_available_capacity` value.
  Boundary requires the extra headroom so that a worker near the threshold does not flip back and forth between states.

## Remote storage state

The workers that you configure for session recording storage must have access to the external object store. Workers report permission states back to Boundary, depending on the availability of the external object store.
Boundary uses the permission states to determine what actions the worker can perform on the configured external storage.

Workers can have the following permission states:

- `read`: The worker can read from the external storage. It can also play back recorded sessions, if the permission state is `ok`.
- `write`: The worker can write to the external storage. It can also record sessions, if the permission state is `ok`.
- `delete`: The worker can delete data from the external storage. It can also clean up recorded sessions, if the permission state is `ok`.

Boundary uses the permission states to determine the remote storage state of a worker. The worker can have the following remote storage states:
- `available`: All permission states are healthy. The worker has the required access to the external storage.
- `error`: One or more of the permission states are not healthy. Workers may not be able to perform certain actions on the external storage.

Boundary periodically checks the states of any workers that use the external storage, and then reports them back to the controller.

You can check the remote storage state of a worker using the `boundary workers read -id $WORKER_ID` command.

```
Worker information:
  Active Connection Count:   0
  Address:                   0.0.0.0:9202
  Created Time:              Tue, 04 Jun 2024 13:52:27 PDT
  ID:                        w_RPfBj239to
  Last Status Time:          2024-06-04 20:55:35.589282 +0000 UTC
  Local Storage State:       available
  Remote Storage State:
	sb_fhde575e:
		Status: available
		Permissions:
			Write: ok
			Read: ok
			Delete: ok
	sb_jksdgh4:
		Status: error
		Permissions:
			Write: error
			Read: ok
			Delete: ok
  Release Version:           Boundary v0.17.0+ent
  Type:                      pki
  Updated Time:              Tue, 04 Jun 2024 13:55:35 PDT
  Version:                   1
```

## Example worker HCL configuration

Refer to the following example configuration to configure workers for session recording storage:

```hcl
worker {
  auth_storage_path      = "/boundary/demo-worker-1"
  initial_upstreams      = ["10.0.0.1"]
  recording_storage_path = "/local/storage/directory"
  recording_storage_minimum_available_capacity = "500MB"
}
```

The Boundary service should also have access to the `auth_storage_path` defined in the worker configuration file.

For example,

```shell-session
$ sudo chown boundary:boundary /local/storage/directory
```

To learn more about running the Boundary service under systemd, refer to the [Deploy workers: Manually configure systemd](/boundary/docs/deploy/self-managed/deploy-workers#manually-configure-systemd-optional) documentation.

## Next steps

After you configure worker storage, you can configure the external storage for [Amazon S3](/boundary/docs/session-recording/configuration/storage-providers/configure-s3), [MinIO](/boundary/docs/session-recording/configuration/storage-providers/configure-minio), or an [S3-compliant provider](/boundary/docs/session-recording/configuration/storage-providers/configure-s3-compliant).